Quick cache breaks insert keyframe #30974

Closed
opened 2012-04-16 15:23:30 +02:00 by Karl STEIN · 7 comments

%%%Hi,
I am working on a scene with motion tracking,
I followed the 2D tracking point tutorial on the Track, Match and Blend! DVD.

I wanted to scale the empty (tracking object) over frames to scale children objects,
but it seems that it's not possible to change scale on frames where empty is moving.

You'll see that in the file attached, very easy t understand, I explained it in the file.
Please have a look.

Thank You.


CPU: Intel Core i7-2720QM
RAM: 8GB
GFX: AMD 6970M 2GB
OS: Linux Ubuntu 11.10
Drivers: Catalyst 12.3
Blender: 2.62.3 SVN r45474%%%

%%%Hi, I am working on a scene with motion tracking, I followed the 2D tracking point tutorial on the Track, Match and Blend! DVD. I wanted to scale the empty (tracking object) over frames to scale children objects, but it seems that it's not possible to change scale on frames where empty is moving. You'll see that in the file attached, very easy t understand, I explained it in the file. Please have a look. Thank You. - - - - - CPU: Intel Core i7-2720QM RAM: 8GB GFX: AMD 6970M 2GB OS: Linux Ubuntu 11.10 Drivers: Catalyst 12.3 Blender: 2.62.3 SVN r45474%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The Quick Cache setting that was enabled in the particle system seems to be causing this, disabling that works around the issue.%%%

%%%The Quick Cache setting that was enabled in the particle system seems to be causing this, disabling that works around the issue.%%%
Author

%%%Thank you Bretch,
Your solution is working great, but is it a bug or is it normal behaviour ?
Greetings.%%%

%%%Thank you Bretch, Your solution is working great, but is it a bug or is it normal behaviour ? Greetings.%%%

%%%It's definitely not something that is intended to happen, keyframing should really just keep working. But it may get moved to the todo list because it's a bit of a design limitation too, needs to be investigated more.%%%

%%%It's definitely not something that is intended to happen, keyframing should really just keep working. But it may get moved to the todo list because it's a bit of a design limitation too, needs to be investigated more.%%%
Member

%%%Let's ask Sergey!%%%

%%%Let's ask Sergey!%%%
Member

%%%OK I have a fix, goes to svn in a few minutes.

  • Quick cache option gets disabled now. The code was doing really bad things on user interaction updates, not meant to do it that way
  • The FollowTrack constraint didn't have a good pivot point set, made it even harder to scale it %%%
%%%OK I have a fix, goes to svn in a few minutes. - Quick cache option gets disabled now. The code was doing really bad things on user interaction updates, not meant to do it that way - The FollowTrack constraint didn't have a good pivot point set, made it even harder to scale it %%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30974
No description provided.